change return value in the method getListOfAllEmployees() to Map